Enhance IncomeService and IncomeController to support filtering incomes by user ID, income type, and date range